# side-project-manim

./: CLAUDE.md  Dockerfile  README.md  railway.json
linear-algebra-visualizer/: .gitignore  Dockerfile  pyproject.toml
linear-algebra-visualizer/backend/: main.py  requirements.txt  scene_registry.py
linear-algebra-visualizer/backend/llm/: parser.py  pdf_parser.py
linear-algebra-visualizer/backend/scenes/: basis_change.py  clt.py  derivative.py  determinant.py  eigenvalue.py  fourier.py  hypothesis_test.py  linear_transform.py  mle.py  standard_error.py  taylor_series.py
linear-algebra-visualizer/docker/: Dockerfile  docker-compose.yml
linear-algebra-visualizer/frontend/: app.js  create.html  index.html  pack.html  package-lock.json  package.json  style.css  vite.config.ts
linear-algebra-visualizer/frontend-interactive/: index.html  package-lock.json  package.json
linear-algebra-visualizer/frontend-interactive/src/: App.css  App.tsx
linear-algebra-visualizer/frontend-interactive/src/store/: visualizerStore.ts
linear-algebra-visualizer/frontend/src/: App.tsx
linear-algebra-visualizer/frontend/src/components/: MatrixInput.tsx  ResultDisplay.tsx
linear-algebra-visualizer/frontend/src/store/: visualizerStore.ts
linear-algebra-visualizer/manim-web-core/: README.md  package-lock.json  package.json  tsconfig.json
linear-algebra-visualizer/manim-web-core/src/: Scene.ts  colors.ts  constants.ts  index.ts  rate-functions.ts
linear-algebra-visualizer/tests/: test_api.py  test_parser.py  test_registry.py
requirements/: manim-linear-algebra-visualizer.md
(+24 files in other folders)
