[project]
name = "linear-algebra-visualizer"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "pycairo==1.27.0",
    "manim==0.18.1",
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "numpy==1.26.4",
    "pydantic==2.6.1",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
no-build-isolation-package = ["pycairo"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
